# NES-Emulator

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  NES Emulator.sln  README  README.md  commit_log.txt  error.txt  jsonscript.sh  mario.save  opcodegen.py  output.txt  ref.txt
NES Emulator/: AFE6502.cpp  AFE6502.hpp  NES Emulator.vcxproj  NES Emulator.vcxproj.filters  binmaker.cpp  main.cpp
Notes/: 6502.md  reference.cpp  reference.h
Notes/Input/: Output.md
asm/: color_test.asm
include/: 2A03.h  Cartridge.h  address_modes.h  bus.h  cartridge.h  cpu.h  emulator.h  instructions.h  mapper0.h  ppu.h  sdl_interface.h
lazy/: input.txt  markdown.py  output.md
lib/: BUS.h  CPU.h  PPU.h  bus.h  bus.hpp  cartridge.h  common.hpp  cpu.h  cpu.hpp  mainbus.h  mapper.h  mapper000.h  ppu.h  telivision.h
notes/: APU.md  Memorymap.md  PPU.md  mapper001.md
notes/.obsidian/: workspace.json
output/: NES  dissasembly.txt  output.txt
reference_code/: reference.rs  reference2.rs  server.py
src/: 2A03.cpp  BUS.cpp  CPU.cpp  Cartridge.cpp  Mapper.cpp  PPU.cpp  address_modes.c  apu.rs  args.rs  bus.c  bus.cpp  bus.rs  cartridge.c  cartridge.cpp  cartridge.rs  controller.rs  cpu.c  cpu.cpp  cpu.rs  emulator.cpp  instructions.c  main.c  main.cpp  main.rs  mainbus.cpp  maper000.cpp  mapper0.c  nes.rs  network.rs  ppu.c  ppu.cpp  ppu.rs  render.rs  sdl_interface.c  state.rs  states.rs  telivision.cpp
src/bus/: cpubus.rs  mod.rs
src/cartridge/: cartridge.rs  mapper.rs  mapper000.rs  mapper001.rs  mapper002.rs  mapper003.rs  mapper004.rs  mapper066.rs  mod.rs
src/cpu/: processor.rs
src/frame/: frame.rs
src/nes/: bus.rs  (+1 more)
test/: ADC  ADC.c  overflow  overflow.c
tests/: Overflow.cpp  SBC.c  bytedump  cpustatus  cpustatus.cpp  functptr  functptr.cpp  ines  ines.c  nesread.c  output.txt  program.c  structs  structs.cpp  wrapper.nes
tools/: InstructionGen.py  instructions.rs  instructions.txt
(+50 files in other folders)
