[package]
name = "Emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
iroh = "0.34.1"
minifb = "0.28.0"
rfd = "0.15.3"
rodio = "0.20.1"
tokio = "1.44.2"
rand_core = "0.6.4"
iroh-gossip = "0.34.1"
clap = { version = "4.5.37", features = ["derive"] }
serde = "1.0.219"
anyhow = "1.0.98"
serde_json = "1.0.140"
rand = "0.9.1"
