[package]
name = "Emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
minifb = "0.28.0"
rfd = "0.15.3"
rodio = "0.20.1"
rand_core = "0.6.4"
clap = { version = "4.5.37", features = ["derive"] }
serde = "1.0.219"
anyhow = "1.0.98"
serde_json = "1.0.140"
rand = "0.9.1"
device_query = "3.0.1"
log = "0.4.28"
flexi_logger = "0.31.7"
